# AegisAudit

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  scan_history.db
.github/workflows/: aegis-scan.yml  ci.yml  publish.yml
aegis-report/: report.html  report.json  report.sarif
aegisaudit/: __init__.py  cli.py  config.py  fetcher.py  history.py  models.py  notifications.py  policy.py  runner.py  scoring.py
aegisaudit/checks/: __init__.py  cookies.py  dns.py  exposure.py  headers.py  https.py  javascript.py  secrets.py  security_txt.py  sri.py  tls.py
aegisaudit/reporters/: __init__.py  html_report.py  json_report.py  sarif_report.py
aegisaudit/sast/: dependencies.py  scanner.py  secrets.py  static.py
docs/: 00-vision.md  00-vision.md.metadata.json  00-vision.md.resolved  01-ethics-scope.md  01-ethics-scope.md.metadata.json  01-ethics-scope.md.resolved.0  02-requirements.md  02-requirements.md.metadata.json  02-requirements.md.resolved.0  03-architecture.md  03-architecture.md.metadata.json  03-architecture.md.resolved  04-data-model.md  04-data-model.md.metadata.json  04-data-model.md.resolved  05-cli-spec.md  05-cli-spec.md.metadata.json  05-cli-spec.md.resolved.0  06-config-policy.md.metadata.json  06-config-policy.md.resolved  07-check-catalog.md  07-check-catalog.md.metadata.json  07-check-catalog.md.resolved  08-reporting.md  08-reporting.md.metadata.json  08-reporting.md.resolved.0  09-testing.md  09-testing.md.metadata.json  09-testing.md.resolved  10-roadmap.md  10-roadmap.md.metadata.json  10-roadmap.md.resolved.0  11-security-of-tool.md  11-security-of-tool.md.metadata.json  11-security-of-tool.md.resolved  implementation_plan.md
examples/: aegis-config.toml
templates/: report.html.j2
tests/: test_basic.py  test_checks_cookies.py  test_checks_headers.py  test_reporters.py  test_sast_scanner.py
